--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+
 }
 
 .top-tags{
@@ -62,7 +63,7 @@
             left: 10px;
 
             &::before{
-                content: '<h1>';
+                content: '';
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 position:absolute;
@@ -73,7 +74,7 @@
             }
 
             &::after{
-                content: '<h1/>';
+                content: '';
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 position:absolute;
