--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,12 +1,13 @@
 .nav-bar {
     background: #ffffff;
-    width: 100px;
+    width: 30px;
     height: 100%;
     position: absolute;
     top: 0;
     right: 0;
     z-index: 3;
     min-height: 500px;
+    transition: width 1s;
 
     .logo{
         display: block;
@@ -15,7 +16,7 @@
         img{
             display: block;
             margin: 8px auto;
-            width: 24px;
+            width: 30px;
             height: auto;
 
             &.sub-logo{
@@ -30,18 +31,20 @@
         text-align: center;
         position: absolute;
         height: 210px;
-        top: 50%;
+        top: 78%;
         margin-top: -120px;
+        transition: top 1.5s;
         width: 100%;
 
         a{
-            font-size: 40px;
+            font-size: 25px;
             color: #4d4d4e;
             display: block;
             line-height: 51px;
-            height: 70px;
+            height: 40px;
             position: relative;
             text-decoration: none;
+            transition: height 1s 0.3s, font-size 1s 0.3s;
 
             i{
                 transition: all 0.3s ease-out;
@@ -126,6 +129,29 @@
 
                 }
             }
+        }
+    }
+}
+
+.nav-bar:hover{
+    width: 80px;
+    nav{
+        top: 45%;
+        a{
+            font-size: 40px;
+            height: 90px;
+
+        }
+    }
+}
+
+.nav-bar:not(:hover) {
+    transition-delay: 0.3s;
+
+    nav {
+        transition-delay: 0.5s;
+        a {
+        transition-delay: 0.5s;
         }
     }
 }
